--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.63",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
+    "@vercel/analytics": "^1.1.3",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
